feat: обновление в части работы с тегами